# rust_nextcloud_api

./: Cargo.toml  shell.nix
deck/: Cargo.toml
deck/examples/: list_boards.rs
deck/src/: lib.rs
ocs_core/: Cargo.toml
ocs_core/src/: core.rs  lib.rs
src/: lib.rs
