[package]
name = "nextcloud_deck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nextcloud_ocs_core = { path = "../ocs_core" }

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.50"

[dev-dependencies]
tokio = { version = "1.8.0", features = ["full"] }
dotenv = { version = "0.15.0" }

