[package]
name = "nextcloud_ocs_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.50"

tokio = { version = "1.8.0", features = ["full"], optional=true}
dotenv = { version = "0.15.0", optional=true}

[features]
build-binary = ["tokio", "dotenv"]

[[bin]]
name = "basic_nextcloud_client"
required-features = ["build-binary"]
